--- a/kongmink-app/build.gradle
+++ b/kongmink-app/build.gradle
@@ -6,9 +6,11 @@ plugins {
 description = 'kongmink-app'
 
 dependencies {
+    implementation project(':kongmink-api')
     implementation "org.javaloong.kongmink:pf4j-spring-boot-starter:${pf4jSpringBootVersion}"
     
-    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
